Lecture de données dans une base HSQLDB.connection - dao - service - controller - vue

--- a/tutoriel-web-spring/src/main/resources/messages_fr.properties
+++ b/tutoriel-web-spring/src/main/resources/messages_fr.properties
@@ -1,2 +1,7 @@
 titre.bonjour=Bonjour avec Spring
 libelle.bonjour.lemonde=Bonjour {0} Spring.
+
+titre.listecourses=Liste de courses
+colonne.identifiant=IDOBJET
+colonne.libelle=LIBELLE
+colonne.quantite=QUANTITE
