--- a/tutoriel-web-spring/src/main/resources/messages_fr.properties
+++ b/tutoriel-web-spring/src/main/resources/messages_fr.properties
@@ -13,3 +13,6 @@ creation.elementcourses.libelle.quantite=Quantité
 NotEmpty.creation.libelle=Le libellé est nécessaire.
 NotEmpty.creation.quantite=La quantité est nécessaire.
 Pattern.creation.quantite=La quantité doit être numérique et positive.
+
+titre.suppression.elementcourses=Suppression d'élément de la liste de courses
+suppression.supprimer.libelle=Supprimer
