Modification de données en bdd

--- a/tutoriel-web-spring/src/main/resources/messages_fr.properties
+++ b/tutoriel-web-spring/src/main/resources/messages_fr.properties
@@ -16,3 +16,5 @@ Pattern.creation.quantite=La quantité doit être numérique et positive.
 
 titre.suppression.elementcourses=Suppression d'élément de la liste de courses
 suppression.supprimer.libelle=Supprimer
+
+titre.modification.elementcourses=Modification d'élément de la liste de courses
