Création d'un meun pour l'application avec les Tiles

--- a/tutoriel-web-spring/src/main/resources/messages_fr.properties
+++ b/tutoriel-web-spring/src/main/resources/messages_fr.properties
@@ -18,3 +18,5 @@ titre.suppression.elementcourses=Suppression d'élément de la liste de courses
 suppression.supprimer.libelle=Supprimer
 
 titre.modification.elementcourses=Modification d'élément de la liste de courses
+
+titre.application=Application de liste de courses
